--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "build": "vue-cli-service build --modern",
     "lint": "vue-cli-service lint"
   },
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "marchingsquares": "^1.3.3",
     "noise-map": "^1.1.0",
+    "three": "^0.104.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
